--- a/index.html
+++ b/index.html
@@ -30,7 +30,42 @@
 </head>
 <body class="bg-gray-50 text-gray-900">
 
- <!-- Header --> <header class="fixed top-0 w-full bg-white shadow z-50"> <div class="max-w-6xl mx-auto flex items-center justify-between p-4"> <div class="flex items-center gap-3"> <!-- Logo --> <img src="Assets/KG.png" alt="Khuselo Logo" class="h-12 w-auto" /> </div> <nav> <ul class="flex gap-6 text-gray-700"> <li><a href="#home" class="hover:text-orange-600 transition">Home</a></li> <li><a href="#services" class="hover:text-orange-600 transition">Services</a></li> <li><a href="#about" class="hover:text-orange-600 transition">About</a></li> <li><a href="#contact" class="hover:text-orange-600 transition">Contact</a></li> <li><a href="#contact" class="px-3 py-1 border border-orange-500 text-orange-500 rounded hover:bg-orange-50 transition">Request Quote</a></li> </ul> </nav> </div> </header>
+ <!-- Header -->
+<header class="fixed top-0 w-full bg-white shadow z-50">
+  <div class="max-w-6xl mx-auto flex items-center justify-between px-4 py-3">
+    <!-- Logo -->
+    <div class="flex items-center">
+      <img src="Assets/KG.png" alt="Khuselo Logo" class="h-10 w-auto md:h-12" />
+    </div>
+
+    <!-- Mobile Menu Button -->
+    <button id="menu-toggle" class="md:hidden text-gray-700 focus:outline-none">
+      <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2"
+        viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M4 6h16M4 12h16M4 18h16" />
+      </svg>
+    </button>
+
+    <!-- Navigation -->
+    <nav class="hidden md:flex gap-6 text-gray-700 items-center">
+      <a href="#home" class="hover:text-orange-600 transition">Home</a>
+      <a href="#services" class="hover:text-orange-600 transition">Services</a>
+      <a href="#about" class="hover:text-orange-600 transition">About</a>
+      <a href="#contact" class="hover:text-orange-600 transition">Contact</a>
+      <a href="#contact" class="px-3 py-1 border border-orange-500 text-orange-500 rounded hover:bg-orange-50 transition">Request Quote</a>
+    </nav>
+  </div>
+
+  <!-- Mobile Menu -->
+  <div id="mobile-menu" class="md:hidden hidden px-4 pb-4 bg-white shadow">
+    <a href="#home" class="block py-2 text-gray-700 hover:text-orange-600">Home</a>
+    <a href="#services" class="block py-2 text-gray-700 hover:text-orange-600">Services</a>
+    <a href="#about" class="block py-2 text-gray-700 hover:text-orange-600">About</a>
+    <a href="#contact" class="block py-2 text-gray-700 hover:text-orange-600">Contact</a>
+    <a href="#contact" class="block mt-2 px-3 py-2 border border-orange-500 text-orange-500 rounded hover:bg-orange-50 transition text-center">Request Quote</a>
+  </div>
+</header>
+
   
   <!-- Hero / Slideshow -->
   <section id="home" class="relative h-screen overflow-hidden">
@@ -225,6 +260,11 @@
 
     // Set current year in footer
     document.getElementById("year").textContent = new Date().getFullYear();
+    // Toggle mobile menu
+  document.getElementById("menu-toggle").addEventListener("click", () => {
+    const menu = document.getElementById("mobile-menu");
+    menu.classList.toggle("hidden");
+  });
   </script>
 </body>
 </html>
