--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   
   <!-- Hero / Slideshow -->
-  <section id="home" class="relative h-screen overflow-hidden">
+  <section id="home" class="relative h-[60vh] md:h-[70vh] overflow-hidden">
     <!-- Slides -->
     <img src="Assets/Rad.png" class="hero-slide active" alt="Communication infrastructure" />
     <img src="Assets/Cam.png" class="hero-slide" alt="Camera surveillance" />
@@ -99,7 +99,7 @@
         <p>
           We design and install two-way radio networks, repeaters, and long-range communication for operational coverage — ideal for security, mining, transport, and remote sites.
         </p>
-        <img src="https://images.unsplash.com/photo-1517430816045-df4b7de1fd5b?auto=format&fit=crop&w=800&q=60"
+        <img src="Assets/Rad.png"
           alt="Two way radio" class="mt-4 rounded-lg object-cover w-full h-40" />
       </div>
 
@@ -144,7 +144,7 @@
         <p>
           Automated workflow solutions, managed print/fax services, and smart office setups to streamline your daily operations and reduce costs.
         </p>
-        <img src="https://images.unsplash.com/photo-1562072546-1cedf7bfa878?auto=format&fit=crop&w=800&q=60"
+        <img src="Assets/OA.png"
           alt="Office automation" class="mt-4 rounded-lg object-cover w-full h-40" />
       </div>
     </div>
