--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center text-white px-6">
       <div class="text-center space-y-4">
         <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">
-          Connect & Protect  
+          Connect & Protect Our People & Assets 
         </h1>
         <p class="text-lg md:text-2xl max-w-xl mx-auto">
           Our mission is to secure your communications, network, and assets across South Africa.
@@ -95,7 +95,7 @@
     <h2 class="text-3xl font-bold text-center mb-12">Our Services</h2>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-7xl mx-auto">
       <div class="bg-white p-6 rounded-lg shadow hover:shadow-xl transition transform hover:-translate-y-2 hover:scale-105" data-aos="fade-up">
-        <h3 class="text-xl font-semibold text-orange-600 mb-3">Two-Way Radio Systems</h3>
+        <h3 class="text-xl font-semibold text-orange-600 mb-3">Two-Way Radio & Repeater Solutions</h3>
         <p>
           We design and install two-way radio networks, repeaters, and long-range communication for operational coverage — ideal for security, mining, transport, and remote sites.
         </p>
@@ -108,7 +108,7 @@
         <p>
           Deployment of high-resolution camera systems, smart analytics, and ANPR poles to monitor, detect, and log vehicle movements for security and traffic control.
         </p>
-        <img src="https://images.unsplash.com/photo-1511707171634-5f897ff02aa9?auto=format&fit=crop&w=800&q=60"
+        <img src="Assets/Cam.png"
           alt="CCTV camera" class="mt-4 rounded-lg object-cover w-full h-40" />
       </div>
 
@@ -131,7 +131,7 @@
       </div>
 
       <div class="bg-white p-6 rounded-lg shadow hover:shadow-xl transition transform hover:-translate-y-2 hover:scale-105" data-aos="fade-up" data-aos-delay="400">
-        <h3 class="text-xl font-semibold text-orange-600 mb-3">VOIP & Repeater Solutions</h3>
+        <h3 class="text-xl font-semibold text-orange-600 mb-3">VOIP</h3>
         <p>
           We offer VoIP architecture, PBX setup, and repeater systems to extend communication reach in difficult terrains and indoor environments.
         </p>
@@ -200,7 +200,7 @@
       <div class="bg-white p-6 rounded-lg shadow hover:bg-orange-50 transition" data-aos="fade-up">
         <h4 class="font-semibold">Televonic</h4>
         <p class="text-sm text-gray-600">Polokwane</p>
-        <p class="mt-2">123 Main Rd, Polokwane</p>
+        <p class="mt-2">1 Industira Street Polokwane </p>
       </div>
       <div class="bg-white p-6 rounded-lg shadow hover:bg-orange-50 transition" data-aos="fade-up" data-aos-delay="100">
         <h4 class="font-semibold">Electra</h4>
@@ -268,3 +268,5 @@
   </script>
 </body>
 </html>
+
+
