--- a/index.html
+++ b/index.html
@@ -3,12 +3,65 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Khuselo Africa</title>
-  <!-- Tailwind via CDN -->
+
+  <!-- ✅ Basic SEO -->
+  <title>Khuselo Africa | Secure Communications, Networking & Internet Solutions</title>
+  <meta name="description" content="Khuselo Africa delivers secure communication, networking, CCTV, and wireless internet solutions across South Africa. We connect and protect people, assets, and operations with reliable ICT, radio, and security systems." />
+  <meta name="keywords" content="Khuselo Africa, wireless internet South Africa, ICT solutions, business internet, CCTV installation, ANPR cameras, two-way radio, VoIP, office automation, network design, security systems, connectivity, broadband provider" />
+  <meta name="author" content="Khuselo Africa" />
+  <link rel="canonical" href="https://khuseloafrica.com/" />
+
+  <!-- ✅ Favicons (Browser + Mobile Icons) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="Assets/logo-32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="Assets/logo-180.png" />
+  <meta name="theme-color" content="#f97316" />
+
+  <!-- ✅ Open Graph (Facebook, LinkedIn, WhatsApp) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Khuselo Africa | Secure Communications & Networking" />
+  <meta property="og:description" content="Leading provider of secure internet, radio, CCTV, and networking solutions across South Africa." />
+  <meta property="og:url" content="https://khuseloafrica.com/" />
+  <meta property="og:image" content="https://khuseloafrica.com/Assets/logo-512.png" />
+  <meta property="og:site_name" content="Khuselo Africa" />
+
+  <!-- ✅ Twitter Card (for social sharing) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Khuselo Africa | Secure Communications & Networking" />
+  <meta name="twitter:description" content="Secure and reliable networking, radio, and CCTV solutions for South African businesses." />
+  <meta name="twitter:image" content="https://khuseloafrica.com/Assets/logo-512.png" />
+
+  <!-- ✅ Structured Data (for Google Rich Results) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Khuselo Africa",
+    "url": "https://khuseloafrica.com",
+    "logo": "https://khuseloafrica.com/Assets/logo-512.png",
+    "description": "Khuselo Africa provides integrated internet, security, and networking solutions across South Africa — including CCTV, radio communications, VoIP, and office automation.",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+27 11 000 0000",
+      "contactType": "Customer Service",
+      "email": "info@khuselo.africa",
+      "areaServed": "ZA",
+      "availableLanguage": ["en"]
+    },
+    "sameAs": [
+      "https://www.facebook.com/khuseloafrica",
+      "https://www.linkedin.com/company/khuseloafrica"
+    ]
+  }
+  </script>
+
+  <!-- ✅ Tailwind via CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- AOS for scroll animations -->
+
+  <!-- ✅ AOS Animation Library -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+  <!-- ✅ Custom Styles -->
   <style>
     html {
       scroll-behavior: smooth;
@@ -28,6 +81,7 @@
     }
   </style>
 </head>
+
 <body class="bg-gray-50 text-gray-900">
 
  <!-- Header -->
@@ -268,4 +322,5 @@
   </script>
 </body>
 </html>
+
 
