--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
   <section id="contact" class="py-20 px-6">
     <h2 class="text-3xl font-bold text-center mb-8">Get in Touch</h2>
     <div class="max-w-xl mx-auto space-y-6 text-center" data-aos="fade-up">
-      <p>Email: <a href="mailto:info@khuselo.africa" class="text-orange-600 hover:underline">info@khuselo.africa</a></p>
-      <p>Phone: <span class="font-semibold">+27 11 000 0000</span></p>
-      <p>Head Office: 9 Sea View Rd, Cape Town</p>
+      <p>Email: <a href="mailto:operations@televonic.co.za" class="text-orange-600 hover:underline">operations@televonic.co.za</a></p>
+      <p>Phone: <span class="font-semibold">+015 297 3734</span></p>
+      <p>Head Office: 1 Industria st, Polokwane</p>
       <form class="mt-6 bg-white p-6 rounded-lg shadow space-y-3">
         <input type="text" placeholder="Your Name" class="w-full border rounded-md p-2" />
         <input type="email" placeholder="Your Email" class="w-full border rounded-md p-2" />
