--- a/index.html
+++ b/index.html
@@ -916,11 +916,11 @@
       </div>
       
       <div class="section-text s2-text">
-        <h2 class="heading-lg s2-headline">
-          <h2 class="heading-lg s2-headline">
-            INTERNET & WIFI IN HOEDSPRUIT
-          </h2>
-        </h2>
+         <div class="section-text s2-text">
+            <h2 class="heading-lg s2-headline">
+                 INTERNET & WIFI IN HOEDSPRUIT
+            </h2>
+
         
         <p class="s2-body">
           From 10 Mbps to 1 Gbps speeds. Premium Wireless Equipment, Dedicated guest networks, and failover—engineered and tailored to every scenario.
@@ -1477,3 +1477,4 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 
 </body>
 </html>
+
